--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,8 @@
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
+        <a target="_blank" class="page-link" href="http://blog.webjeda.com/jekyll-themes/">Themes</a>
+        <a class="page-link" href="https://github.com/sharu725/thunder">Project</a>    
         {% endfor %}
      
     </nav>
