--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,7 +49,7 @@ body{
     padding: $spacing-unit 0;
     
       @include media-query($on-palm){
-       margin-left: -10;
+       padding left: 10;
         }
 }
 
