--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
     <nav class="site-nav">
         {% for my_page in site.pages %}
           {% if my_page.title %}
-          <a class="ftheader text" href="index.html">Anyi Rao </a>  
-          <span class="ftsubheader text"><a href="#research"> Research</a></span>
-          <span class="ftsubheader text"><a href="#bio"> Bio</a></span>
+          <!--<a class="ftheader text" href="">Anyi Rao </a> -->  
+          <a class="ftsubheader text" href="index.html#research">Academic/Research</a>
+          <a class="ftsubheader text" href="index.html#bio"> Bio</a>
           {% endif %}
         {% endfor %}
     </nav>
