--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header class="site-header" position=fixed>
    
     <a class="site-title" href="{{ site.baseurl }}/"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="65" viewBox="0 0 158.8 79.4" id="logo"><path d="M0 186.3L54.4 38.8 4.6 37.2 72-106.7 139.5-106.6 106.4-18.9 158.6-19.4 0 186.3z"/></svg></a>
-    <nav class="site-nav" position=fixed>
+    <!--<nav class="site-nav" position=fixed> -->
+     <nav class="navbar navbar-default navbar-fixed-top navbar-custom top-nav-short">
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <!--<a class="ftheader text" href="">Anyi Rao </a> -->  
