--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <!--<a class="ftheader text" href="">Anyi Rao </a> -->  
-          <a class="ftsubheader text" href="index.html#research">Academic/Research</a>
-          <a class="ftsubheader text" href="index.html#bio"> Bio</a>
+          <li><a class="ftsubheader text" href="index.html#research">Academic/Research</a></li>
+          <li><a class="ftsubheader text" href="index.html#bio"> Bio</a></li>
           {% endif %}
         {% endfor %}
     </nav>
