--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -156,7 +156,7 @@ table {
   width: 100%;
   padding: 0; }
   table tr {
-    border-top: 1px solid $grey-color;
+    border-top: 1px none;
     background-color: white;
     margin: 0;
     padding: 0; }
@@ -164,12 +164,12 @@ table {
       background-color: #f8f8f8; }
     table tr th {
       font-weight: bold;
-      border: 1px solid $grey-color;
+      border: 1px none;
       text-align: left;
       margin: 0;
       padding: 6px 13px; }
     table tr td {
-      border: 1px solid $grey-color;
+      border: 1px none;
       text-align: left;
       margin: 0;
       padding: 6px 13px; }
