--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -161,7 +161,7 @@ table {
     margin: 0;
     padding: 0; }
     table tr:nth-child(2n) {
-      background-color: #f8f8f8; }
+      background-color: white; }
     table tr th {
       font-weight: bold;
       border: 1px none;
