--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -43,7 +43,7 @@ body{
         }
 }
 
-.brief {
+.content heading anchor {
     margin: 0 auto;
     max-width: 100%;
     padding: $spacing-unit 0;
