--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -53,6 +53,14 @@ body{
         }
 }
 
+.img { 
+    width:300px,
+
+    height:300px,
+
+    margin:10px 10px 10px 10px
+}
+
 
 .post-list {
     margin-left: 0;
