--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,11 +54,9 @@ body{
 }
 
 .img { 
-    width:300px,
-
-    height:300px,
-
-    margin:10px 10px 10px 10px
+    width:300px;
+    height:300px;
+    margin:10px 10px 10px 10px;
 }
 
 
