--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,9 +54,7 @@ body{
 }
 
 .img { 
-    width:300px;
-    height:300px;
-    margin:10px 10px 10px 10px;
+    max-width:100%;height:auto;display:block
 }
 
 
