--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,7 +54,8 @@ body{
 }
 
 .img { 
-    max-width:100%;height:auto;display:block
+    max-width:100%;height:auto;display:block;
+    align:left;
 }
 
 
