--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -55,9 +55,11 @@ body{
 
 .img { 
     max-width:100%;height:auto;display:block;
-    align:left;
 }
 
+.text{
+    display:block;
+}
 
 .post-list {
     margin-left: 0;
