--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,8 +25,8 @@ body{
 
 
 .site-nav {
-    line-height: 56px;
-    //display: inline-block;
+    line-height: 6px;
+    display: inline-block;
 
 }
 
