--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,7 +28,7 @@ body{
     //line-height: 26px;
     //display: inline-block;
     float:right;
-    padding:5px 30px; 
+   // padding:5px 30px; 
 }
 
 /**
