--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -51,12 +51,12 @@ body{
 }
 
 .img { 
-   display:block;
+   //display:block;
    margin: 0 50px 0 0 ;
 }
 
 .text{
-    display:block;
+   //display:block;
 }
 
 .post-list {
