--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@ body{
     
     margin-top: 2em;
     // Positioning context for the mobile navigation icon
-    //position: relative;
+    position: relative;
      @include media-query($on-palm){
         margin-top: 0.625em;
         }
