--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,7 +28,7 @@ body{
     line-height: 56px;
     display: inline-block;
     float:right;
-    padding:10px 30px; 
+    padding:5px 30px;//horizon vertical  
 }
 
 /**
