--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,7 +25,7 @@ body{
 
 
 .site-nav {
-    line-height: 56px;
+    //line-height: 56px;
     display: inline-block;
     float:right;
     padding:5px 30px;//horizon vertical  
