--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -50,13 +50,13 @@ body{
     padding: $spacing-unit 0;
 }
 
-.img { 
-   //display:block;
+.header-img { 
+   display:block;
    margin: 0 50px 0 0 ;
 }
 
-.text{
-   //display:block;
+.header-text{
+   display:block;
 }
 
 .post-list {
