--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,7 +28,8 @@ body{
     //line-height: 56px;
     display: inline-block;
     float:right;
-    padding:5px 30px;//horizon vertical  
+    padding:5px 30px;//horizon vertical 
+    margin:2px
 }
 
 /**
