--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,7 +30,7 @@ body{
     line-height: 26px;
     display: block;
     float:right;
-    //padding:5px 40px;//horizon vertical 
+    padding:5px 40px;//horizon vertical 
 }
 
 /**
