--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,8 +25,8 @@ body{
 
 
 .site-nav {
-    line-height: 26px;
-    display: block;
+    //line-height: 26px;
+    display:block;
     float:right;
     padding:5px 40px;//horizon vertical 
 }
