--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,7 +28,7 @@ body{
     //line-height: 26px;
     display:block;
     float:right;
-    //padding:5px 40px;//horizon vertical 
+    padding:0 40px;//horizon vertical 
 }
 
 /**
