--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,11 +25,11 @@ body{
 
 
 .site-nav {
-    font-size: 16px;
+    font-size:26px;
     //line-height: 26px;
     display:block;
     float:right;
-    padding:0 40px;//horizon vertical 
+    padding:10px 0px;//horizon vertical 
 }
 
 /**
