--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,7 +29,7 @@ body{
     //line-height: 26px;
     display:block;
     float:right;
-    padding:10px 0px;//horizon vertical 
+    padding:100px 0px;//horizon to the right
 }
 
 /**
