--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -27,7 +27,7 @@ body{
 .site-nav {
     font-size:1.5em;
     //line-height: 26px;
-    display:block;
+    display:inline-block;
     float:right;
     padding:10px 0px;//horizon to the right
      @include media-query($on-palm){
