--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -56,7 +56,7 @@ body{
 
 .header-img { 
    display:block;
-   margin: 0 50px 0 0 ;
+   margin: 10px 50px 0 0 ;
      @include media-query($on-palm){
         height: auto;
         }
