--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,8 +17,7 @@ body{
     // Positioning context for the mobile navigation icon
     position: relative;
      @include media-query($on-palm){
-        margin-top: 0.625em;
-        }
+        margin-top: 0.625em;        }
     
     
 }
@@ -56,7 +55,7 @@ body{
 
 .header-img { 
    display:block;
-   margin: 10px 50px 0 0 ;
+   margin: 20px 50px 0 0 ;
      @include media-query($on-palm){
         height: auto;
         }
