--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -18,7 +18,7 @@ body{
     position: relative;
      @include media-query($on-palm){
         margin-top: 0.625em;        }
-    
+     
     
 }
 
@@ -55,7 +55,7 @@ body{
 
 .header-img { 
    display:block;
-   margin: 20px 50px 0 0 ;
+   margin: 20px 50px 0 0 ;//1st is top, 2nd is right
      @include media-query($on-palm){
         height: auto;
         }
