--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
           
         {% endif %}
         {% endfor %}--> 
-       <a class="ftsubheader text" href="index.html#academic">Academic </a>
+       <a class="ftsubheader text" href="index.html#academic">Academic </a> &nbsp
        <a class="ftsubheader text" href="index.html#research">Research </a>      
      <a class="ftsubheader text" href="index.html#bio"> Bio </a>
    </nav>
