--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,7 +7,7 @@ body{
         margin: 0 auto;
     
     @include media-query($on-palm){
-        max-width: 90%;
+        max-width: 95%;
         }
 }
 
@@ -43,7 +43,7 @@ body{
     padding: $spacing-unit 0;
     
       @include media-query($on-palm){
-        max-width: 85%;
+        max-width: 90%;
         }
 }
 
@@ -57,6 +57,7 @@ body{
    display:block;
    margin: 20px 50px 0 0 ;//1st is top, 2nd is right
      @include media-query($on-palm){
+        margin: 10px; 
         height: auto;
         }
 }
