--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,10 @@
           
         {% endif %}
         {% endfor %}--> 
+       <a class="ftsubheader text" href="index.html#bio"> Bio </a> &nbsp
        <a class="ftsubheader text" href="index.html#academic">Academic </a> &nbsp
-       <a class="ftsubheader text" href="index.html#research">Research </a> &nbsp     
-     <a class="ftsubheader text" href="index.html#bio"> Bio </a>
+       <a class="ftsubheader text" href="index.html#research">Research </a>      
+     
    </nav>
  
 {% include color-bar.html %}
