--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,8 @@
         {% endfor %}--> 
        <a class="ftsubheader text" href="index.html#bio"> Bio </a> &nbsp
        <a class="ftsubheader text" href="index.html#academic">Academic </a> &nbsp
-       <a class="ftsubheader text" href="index.html#research">Research </a>      
+       <a class="ftsubheader text" href="index.html#research">Research </a>  &nbsp 
+       <a class="ftsubheader text" href="index.html#project">Projects </a> 
      
    </nav>
  
