--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,9 @@
           
         {% endif %}
         {% endfor %}-->   
-       <a class="ftsubheader text" href="index.html#academic">Academic </a> &nbsp
-       <a class="ftsubheader text" href="index.html#research">Research </a>  &nbsp 
-       <a class="ftsubheader text" href="index.html#project">Projects </a> 
+       <a class="ftsubheader text" href="{{ site.baseurl }}/#academic">Academic </a> &nbsp
+       <a class="ftsubheader text" href="{{ site.baseurl }}/#research">Research </a>  &nbsp 
+       <a class="ftsubheader text" href="{{ site.baseurl }}/#project">Projects </a> 
      
    </nav>
  
