--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
         {% endif %}
         {% endfor %}-->   
        <a class="ftsubheader text" href="{{ site.baseurl }}/#academic">Academic </a> &nbsp
+	   <a class="ftsubheader text" href="{{ site.baseurl }}/#publication">Publication </a> &nbsp
        <a class="ftsubheader text" href="{{ site.baseurl }}/#research">Research </a>  &nbsp 
        <a class="ftsubheader text" href="{{ site.baseurl }}/#project">Projects </a> 
      
